--- a/social.html
+++ b/social.html
@@ -8,7 +8,7 @@
     <body>
         <div class="container">
             <div class="navigation">
-                <a href=""><img src="logo.png" class="logo"></a>
+                <a href="index.html"><img src="logo.png" class="logo"></a>
                 <ul>
                     <li><a href="signup.html">sign up/sign in</a></li>
                     <li><a href="social.html">social</a></li>
